@@ -2940,3 +2940,4 @@ snapshot.c: use the fully encapsulated libspectrum_snap
          can already support them (Fred).
 20081122 disk/disk.c: fix a track length calculation bug (more of bug #2312217)
          (Gergely Szasz).
+20081125 scld.c: fix loading of dock/exrom information from snapshots (Fred).
